-Fixed css for all tables -Repoasset better visibility of fields -Sngle repo asset chagned view nad enabled all fields -Fixed risk dashboard

--- a/app/static/styles/general.css
+++ b/app/static/styles/general.css
@@ -26,8 +26,12 @@ th,td {
   border: 1px solid #ddd;
     /*border-radius: 10%;*/
   padding: 8px;
+
 }
 
+td{
+    white-space: nowrap;
+}
 table{
     border: 3px solid #ddd;
     /*border-radius: 5%;*/
@@ -345,7 +349,4 @@ a.bg-dark {
 .main-link-navbar {
     height: 100%;
 }
-
-
-
 
